<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preferences"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:background="@color/black"
    android:orientation="vertical"
    >

    <TextView android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/app_about"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:gravity="center"
        android:text="@string/app_desc"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:gravity="center"
        android:text="@string/app_desc_cont_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:gravity="center"
        android:text="@string/app_desc_cont_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/app_settings_str"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/settings_enable_sound"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:onClick="onSoundEnableDisable"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/app_setting_enable_sound_desc"
            android:textSize="20sp"
            android:gravity="center"
            />
    </RelativeLayout>

</LinearLayout>